# POS-System-forked-

./: .coverage  Customer.py  CustomerTest.py  Order.py  OrderItem.py  OrderTest.py  Product.py  ProductResource.py  ProductTest.py  Sale.py  SaleItem.py  SaleTest.py  User.py  Warehouse.py  WarehouseItem.py  app.py  coverage.xml  database.py  main.py  pyproject.toml  requirements.txt  test.py  test_all.py  test_main.py  test_module.py  unittest.py
.codesandbox/: .dockerignore  Dockerfile  requirements.txt  tasks.json
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  docker-image.yml  docker.yml  python-app.yml  python-package.yml
instance/: POS.sqlite  customers.db  test.sqlite
static/: script.js  style.css
templates/: index.html  style.scss
